--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,13 @@
             android:name=".SignUpActivity"
             android:parentActivityName=".LoginActivity"
             android:screenOrientation="portrait" />
-
+        <activity android:name=".EditBucketList"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".MyProfile"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
